# borunte_hal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Pipfile  README.md  hal.py  hal_config.py  hardware.py  joint_config.yml  mesahandler.py  motor_config.yml  package.xml  robot.py  run.py  sim_hardware.py  utils.py
Borunte-Control/: Borunte-Control.qml  LedWithText.qml  description.ini
borunte_hal/: constants.py  hardware.py  mesahandler.py  robot.py  serial_tty_detection.py  sim_hardware.py  utils.py
components/: absolute_joint.icomp  i620p_modbus.py  lamp_control.py  robotiq_modbus.py
components/tests/: test_absolute_joint.py
config/: FPGAFILE.BIT  joint_config.yml
tests/: conftest.py  test_absolute_joint.py  test_robot.py
